added new test cases in login test

--- a/SauceDemo_project/Tests/report.html
+++ b/SauceDemo_project/Tests/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,136954],[[4,5,6,7,[],[1,64,10004],[],[[8,0,0,[],[1,1096,8972],[]]],[],[1,1,0,0]],[9,10,11,12,[],[1,10070,87346],[],[[13,0,0,[],[1,11526,12375],[]],[13,0,0,[],[1,23903,10136],[]],[13,0,0,[],[1,34039,10213],[]],[13,0,0,[],[1,44253,17159],[]],[13,0,0,[],[1,61413,24890],[]],[13,0,0,[],[1,86305,11110],[]]],[],[6,6,0,0]],[14,15,16,17,[],[1,97418,5422],[],[[18,0,0,[],[1,97431,5407],[]]],[],[1,1,0,0]],[19,20,21,22,[],[1,102841,8415],[],[[23,0,0,[],[1,102851,8405],[]]],[],[1,1,0,0]],[24,25,26,27,[],[1,111258,25695],[],[[28,0,0,[],[1,111269,6481],[]],[29,0,0,[],[1,117751,6365],[]],[30,0,0,[],[1,124117,6430],[]],[31,0,0,[],[1,130548,6404],[]]],[],[4,4,0,0]]],[],[],[13,13,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,93177],[],[[5,0,0,[],[1,5491,16904],[]],[5,0,0,[],[1,22397,10969],[]],[5,0,0,[],[1,33367,10880],[]],[5,0,0,[],[1,44249,15888],[]],[5,0,0,[],[1,60137,10929],[]],[5,0,0,[],[1,71067,10917],[]],[5,0,0,[],[1,81985,11189],[]]],[],[7,7,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\robot_POM\\SauceDemo_project\\Tests","*.","*BrokenLinkTest","*C:\\robot_POM\\SauceDemo_project\\Tests\\BrokenLinkTest.robot","*BrokenLinkTest.robot","*<p>Check for broken links on SauceDemo (Non-failing version)\x3c/p>","*Verify All Links Are Valid","*LoginTest","*C:\\robot_POM\\SauceDemo_project\\Tests\\LoginTest.robot","*LoginTest.robot","*<p>To validate the successfull login in sauce demo website\x3c/p>","*validate Login with","*LogoutTest","*C:\\robot_POM\\SauceDemo_project\\Tests\\LogoutTest.robot","*LogoutTest.robot","*<p>To validate the successful logout after login\x3c/p>","*logout after successful login","*MenuTest","*C:\\robot_POM\\SauceDemo_project\\Tests\\MenuTest.robot","*MenuTest.robot","*<p>To validate the functionality of the elements in menu bar\x3c/p>","*Validate Redirection of about button in menu","*ProductFilterTest","*C:\\robot_POM\\SauceDemo_project\\Tests\\ProductFilterTest.robot","*ProductFilterTest.robot","*<p>To test product filter functionality with different dropdown options\x3c/p>","*Sort Ascending By name","*Sort Descending By name","*Sort Ascending By price","*Sort Descending By price"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*C:\\robot_POM\\SauceDemo_project\\Tests\\LoginTest.robot","*LoginTest.robot","*<p>To validate the successfull login in sauce demo website\x3c/p>","*validate Login with"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:14","fail":0,"label":"All Tests","pass":13,"skip":0}],[],[{"elapsed":"00:02:17","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":13,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s1","label":"Tests.BrokenLinkTest","name":"BrokenLinkTest","pass":1,"skip":0},{"elapsed":"00:01:27","fail":0,"id":"s1-s2","label":"Tests.LoginTest","name":"LoginTest","pass":6,"skip":0},{"elapsed":"00:00:05","fail":0,"id":"s1-s3","label":"Tests.LogoutTest","name":"LogoutTest","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s4","label":"Tests.MenuTest","name":"MenuTest","pass":1,"skip":0},{"elapsed":"00:00:26","fail":0,"id":"s1-s5","label":"Tests.ProductFilterTest","name":"ProductFilterTest","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:28","fail":0,"label":"All Tests","pass":7,"skip":0}],[],[{"elapsed":"00:01:33","fail":0,"id":"s1","label":"LoginTest","name":"LoginTest","pass":7,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1747763373785;
+window.output["baseMillis"] = 1747799766714;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 137052;
+window.output["generated"] = 93218;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
